ShiftSpace 0.5 basically working under IE8 css needs fixin tho.

--- a/client/views/SSConsole/SSConsole.css
+++ b/client/views/SSConsole/SSConsole.css
@@ -11,6 +11,12 @@
   color: green;
 }
 
+body#SSConsoleFrameBody
+{
+  width: 100%;
+  height: 100%;
+}
+
 #SSConsoleFrameBody #MainTabView.SSTabView
 {
   position: absolute;
